Vite-project: Add Charts

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
   background: #282c34;
-  color: rgb(218, 233, 0);
+  color: #f50f;
   min-height: 100vh;
   padding: 1rem 0;
 }
